[gd_scene load_steps=3 format=3 uid="uid://d3iup24b62ol2"]

[ext_resource type="Script" uid="uid://cpdo3u3cff3ub" path="res://auto_scene.gd" id="1_auto_scene"]
[ext_resource type="FontFile" uid="uid://dqloen3424vrx" path="res://Galmuri9.ttf" id="2_font"]

[node name="AutoScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_auto_scene")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="CenterContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.0
offset_top = -209.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="CenterContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "Auto Scene"
horizontal_alignment = 1

[node name="AutoMoneyLabel" type="Label" parent="CenterContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 64
text = "ü™ô 0"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CenterContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Ïó¨Í∏∞ÏÑú Auto MoneyÎ•º Í¥ÄÎ¶¨Ìï† Ïàò ÏûàÏäµÎãàÎã§"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 282.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "ÎèåÏïÑÍ∞ÄÍ∏∞ (ESC)"
