extends Control

# ========================================
# Auto Scene - Auto Money ê´€ë¦¬ ì”¬
# ========================================

# í°íŠ¸ ë¡œë“œ
const GALMURI_9 = preload("res://Galmuri9.ttf")
# Viewport í´ë¦¬ì–´ ëª¨ë“œ: NEVER
const CLEAR_MODE_NEVER := 1

# ì”¬ íŒŒì¼ì˜ ë…¸ë“œ ì°¸ì¡°
@onready var auto_money_label: Label = $CenterContainer/AutoMoneyLabel
@onready var back_button: Button = $BackButton
@onready var title_label: Label = $CenterContainer/Title
@onready var description_label: Label = $CenterContainer/Description

# ëˆ í‘œì‹œìš© ì• ë‹ˆë©”ì´ì…˜ ë³€ìˆ˜
var displayed_auto_money: float = 0.0
var target_auto_money: int = 0

# ì›ë˜ viewport/ì°½ ìƒíƒœ ì €ì¥
var original_viewport_size: Vector2i
var original_window_mode: Window.Mode
var original_window_position: Vector2i
var original_always_on_top: bool
var original_borderless: bool
var original_unresizable: bool
var original_clear_color: Color
var viewport_rid: RID

# ì°½ ë“œë˜ê·¸ ìƒíƒœ
var is_dragging: bool = false
var drag_start_mouse: Vector2 = Vector2.ZERO
var drag_start_window: Vector2i = Vector2i.ZERO
var drag_offset_from_origin: Vector2i = Vector2i.ZERO


func _ready():
	# ì›ë˜ viewport í¬ê¸°, ì°½ ëª¨ë“œ, ìœ„ì¹˜, always on top ìƒíƒœ ì €ì¥
	viewport_rid = get_viewport().get_viewport_rid()
	original_viewport_size = get_viewport().size
	original_window_mode = get_window().mode
	original_window_position = get_window().position
	original_always_on_top = get_window().always_on_top
	original_borderless = get_window().borderless
	original_unresizable = get_window().unresizable
	original_clear_color = RenderingServer.get_default_clear_color()
	print("ì›ë˜ viewport í¬ê¸°: ", original_viewport_size)
	print("ì›ë˜ ì°½ ëª¨ë“œ: ", original_window_mode)
	print("ì›ë˜ ì°½ ìœ„ì¹˜: ", original_window_position)
	print("ì›ë˜ always on top: ", original_always_on_top)
	
	# ì°½ì„ í•­ìƒ ìµœìƒìœ„ë¡œ ì„¤ì •
	get_window().always_on_top = true
	print("ì°½ì„ í•­ìƒ ìµœìƒìœ„ë¡œ ì„¤ì •")
	
	# ì°½ ëª¨ë“œë¡œ ì „í™˜ (í’€ìŠ¤í¬ë¦°ì´ì—ˆë‹¤ë©´)
	get_window().mode = Window.MODE_WINDOWED
	# í…Œë‘ë¦¬ ì œê±°
	get_window().borderless = true
	# ë°°ê²½ íˆ¬ëª…í™”
	get_window().transparent = true
	get_viewport().transparent_bg = true
	RenderingServer.set_default_clear_color(Color(0, 0, 0, 0))
	
	# ì°½ í¬ê¸°ëŠ” 300x200ìœ¼ë¡œ ì‘ê²Œ, ViewportëŠ” ì›ë˜ í¬ê¸° ìœ ì§€ (UIê°€ ì‘ì•„ì§€ì§€ ì•Šê²Œ)
	var target_window_size: Vector2i = Vector2i(300, 200)
	get_window().size = target_window_size
	# ViewportëŠ” ì›ë˜ í¬ê¸° ìœ ì§€
	get_viewport().size = original_viewport_size
	size = original_viewport_size  # ë£¨íŠ¸ Controlë„ ì›ë˜ í¬ê¸° ìœ ì§€
	
	# ì°½ì„ í™”ë©´ ì¤‘ì•™ìœ¼ë¡œ ì´ë™
	var screen_size = DisplayServer.screen_get_size()
	var window_size = target_window_size
	get_window().position = Vector2i(
		(screen_size.x - window_size.x) / 2,
		(screen_size.y - window_size.y) / 2
	)
	
	print("Auto Scene viewport í¬ê¸°: 1280x640 (ì°½ ëª¨ë“œ, ì¤‘ì•™ ì •ë ¬)")
	
	# ë²„íŠ¼ ì‹œê·¸ë„ ì—°ê²°
	back_button.pressed.connect(_on_back_button_pressed)
	$CenterContainer.gui_input.connect(_on_center_gui_input)
	
	# ë ˆì´ë¸” ìƒ‰ìƒ ì„¤ì •
	title_label.modulate = Color(0.8, 1.0, 1.0)
	auto_money_label.modulate = Color(1.0, 0.9, 0.3)  # ê¸ˆìƒ‰

	
# ì´ˆê¸° ê°’ ì„¤ì •
	displayed_auto_money = Globals.auto_money
	target_auto_money = Globals.auto_money
	update_auto_money_display()


@warning_ignore("unused_parameter")
func _process(_delta):

	# Globalsì˜ auto_money ë³€í™” ì‹œ ì¦‰ì‹œ ë°˜ì˜
	if Globals.auto_money != target_auto_money:
		target_auto_money = Globals.auto_money
		displayed_auto_money = target_auto_money
		update_auto_money_display()


# Auto Money í‘œì‹œ ì—…ë°ì´íŠ¸
func update_auto_money_display():
	if auto_money_label:
		auto_money_label.text = "ğŸª™ " + str(int(displayed_auto_money))


# ëŒì•„ê°€ê¸° ë²„íŠ¼ í´ë¦­
func _on_back_button_pressed():
	# always on top ìƒíƒœ ë³µì›
	get_window().always_on_top = original_always_on_top
	
	# ì°½ ëª¨ë“œë¥¼ ì›ë˜ëŒ€ë¡œ ë³µì›
	get_window().mode = original_window_mode
	
	# Viewport í¬ê¸°ë¥¼ ì›ë˜ëŒ€ë¡œ ë³µì› (ì°½ í¬ê¸°ëŠ” ê±´ë“œë¦¬ì§€ ì•ŠìŒ)
	get_viewport().size = original_viewport_size
	
	# ì°½ ìœ„ì¹˜ ë³µì› (ì°½ ëª¨ë“œì˜€ë‹¤ë©´)
	if original_window_mode == Window.MODE_WINDOWED:
		get_window().position = original_window_position
	get_window().borderless = original_borderless
	get_window().unresizable = original_unresizable
	get_window().transparent = false
	get_viewport().transparent_bg = false
	RenderingServer.set_default_clear_color(original_clear_color)
	
	print("ì°½ ëª¨ë“œ, viewport í¬ê¸°, ìœ„ì¹˜, always on top ë³µì› ì™„ë£Œ")
	
	# ë©”ì¸ ì”¬ìœ¼ë¡œ ëŒì•„ê°€ê¸°
	get_tree().change_scene_to_file("res://world.tscn")


# í‚¤ë³´ë“œ ì…ë ¥ ì²˜ë¦¬
func _input(event: InputEvent):
	if event is InputEventKey and event.pressed and not event.echo:
		# ESC í‚¤ëŠ” ëŒì•„ê°€ê¸°
		if event.keycode == KEY_ESCAPE:
			_on_back_button_pressed()
			get_viewport().set_input_as_handled()
		else:
			# ë‹¤ë¥¸ í‚¤ëŠ” auto_money ì¦ê°€
			Globals.auto_money += 1
			print("í‚¤ ì…ë ¥! Auto Money +1 (í˜„ì¬: ğŸª™", Globals.auto_money, ")")

func _on_center_gui_input(event: InputEvent) -> void:
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
		if event.pressed:
			is_dragging = true
			# í´ë¦­í•œ ì§€ì (í™”ë©´ ì¢Œí‘œ)ê³¼ ì°½ ì¢Œìƒë‹¨ ì‚¬ì´ì˜ ì˜¤í”„ì…‹ ì €ì¥
			drag_start_mouse = DisplayServer.mouse_get_position()
			drag_start_window = get_window().position
			drag_offset_from_origin = Vector2i(drag_start_mouse) - drag_start_window
		else:
			is_dragging = false
	elif event is InputEventMouseMotion and is_dragging:
		# í´ë¦­ ì§€ì ì´ ì°½ ì•ˆì—ì„œ ìœ ì§€ë˜ë„ë¡ ì˜¤í”„ì…‹ì„ ì ìš©í•´ ì´ë™
		var mouse_pos: Vector2 = DisplayServer.mouse_get_position()
		get_window().position = Vector2i(mouse_pos) - drag_offset_from_origin


func _on_shop_button_button_down():
	pass # Replace with function body.
